[package]
name = "influx_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
csv = "1.3.0"
serde = "1.0.197"
futures = "0.3.30"
thiserror = "1.0.58"

chrono = "0.4.24"
influxdb = { version = "0.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
serde_json = "1.0.114"